[gd_scene load_steps=14 format=3 uid="uid://bgtj1nojjm0jc"]

[ext_resource type="PackedScene" uid="uid://c80hdmw2a4le5" path="res://scenes/Burbujas/bubble.tscn" id="1_660gs"]
[ext_resource type="Script" path="res://scenes/Burbujas/bubble_game_logic.gd" id="1_hpnvb"]
[ext_resource type="Texture2D" uid="uid://cvnvpwkrgqf43" path="res://assets/background.png" id="3_eg72a"]
[ext_resource type="FontVariation" uid="uid://csopbvw8d4jyg" path="res://assets/DefaultFonr.tres" id="3_vjobo"]
[ext_resource type="PackedScene" uid="uid://oireobhhu5e5" path="res://scenes/Burbujas/calculadora.tscn" id="3_xljxu"]
[ext_resource type="Script" path="res://scenes/Burbujas/CalculadoraPosicion.gd" id="4_8qbhw"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_eq8tq"]
normal = Vector2(0, 1)
distance = -119.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0h6dn"]
size = Vector2(46.2667, 20)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c2ojq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whyqn"]
bg_color = Color(0.248852, 0.581856, 0.542585, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color(0.483821, 0.886461, 0.810211, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdaku"]
bg_color = Color(0.356617, 0.675966, 0.52455, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color(0.554075, 0.887182, 0.680564, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31las"]
bg_color = Color(0.529917, 0.637395, 0.493937, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color(0.719956, 0.850781, 0.60445, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_gs2ct"]
Button/colors/font_color = Color(0.875, 0.875, 0.875, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/constants/outline_size = 12
Button/font_sizes/font_size = 32
Button/fonts/font = ExtResource("3_vjobo")
Button/styles/focus = SubResource("StyleBoxEmpty_c2ojq")
Button/styles/hover = SubResource("StyleBoxFlat_whyqn")
Button/styles/normal = SubResource("StyleBoxFlat_kdaku")
Button/styles/pressed = SubResource("StyleBoxFlat_31las")
LineEdit/colors/font_outline_color = Color(0, 0, 0, 1)
LineEdit/constants/outline_size = 8
LineEdit/font_sizes/font_size = 32
LineEdit/fonts/font = ExtResource("3_vjobo")
LineEdit/styles/focus = SubResource("StyleBoxFlat_whyqn")
LineEdit/styles/normal = SubResource("StyleBoxFlat_kdaku")
LineEdit/styles/read_only = SubResource("StyleBoxFlat_whyqn")

[node name="Node2" type="Node"]

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("1_hpnvb")
burbuja = ExtResource("1_660gs")

[node name="Background" type="Sprite2D" parent="Node2D"]
position = Vector2(964.5, 539.5)
scale = Vector2(1.96224, 1.86403)
texture = ExtResource("3_eg72a")

[node name="barrera" type="StaticBody2D" parent="Node2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/barrera"]
position = Vector2(507, -5)
shape = SubResource("WorldBoundaryShape2D_eq8tq")

[node name="Area2D" type="Area2D" parent="Node2D"]
position = Vector2(0, -63)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(897, -26)
scale = Vector2(60, 3)
shape = SubResource("RectangleShape2D_0h6dn")

[node name="Marker2D" type="Marker2D" parent="Node2D"]
position = Vector2(669, 1057)
scale = Vector2(-63.146, 1677.76)

[node name="Node" type="Node2D" parent="Node2D"]
position = Vector2(1156, 649)
script = ExtResource("4_8qbhw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.8

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_gs2ct")

[node name="input" type="LineEdit" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
editable = false
select_all_on_focus = true

[node name="calculadora" parent="Control/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_xljxu")]
layout_mode = 2

[connection signal="body_entered" from="Node2D/Area2D" to="Node2D" method="_on_area_2d_body_entered_upper_limit"]
[connection signal="text_submitted" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/input" to="Node2D" method="_on_input_text_submitted"]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button" to="Node2D" method="_on_pad_number_pressed" binds= [1]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button2" to="Node2D" method="_on_pad_number_pressed" binds= [2]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button3" to="Node2D" method="_on_pad_number_pressed" binds= [3]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button4" to="Node2D" method="_on_pad_number_pressed" binds= [4]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button5" to="Node2D" method="_on_pad_number_pressed" binds= [5]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button6" to="Node2D" method="_on_pad_number_pressed" binds= [6]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button7" to="Node2D" method="_on_pad_number_pressed" binds= [7]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button8" to="Node2D" method="_on_pad_number_pressed" binds= [8]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button9" to="Node2D" method="_on_pad_number_pressed" binds= [9]]
[connection signal="pressed" from="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora/Button10" to="Node2D" method="_on_pad_number_pressed" binds= [0]]

[editable path="Control/VBoxContainer/HBoxContainer/VBoxContainer/calculadora"]
